--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,11 @@
-
+<!-- grocery list -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" /> -->
-  <title> My To Do List</title>
+  <title> Grocery List</title>
 </head>
 <body>
 	<%= yield %>
