--- a/views/login.erb
+++ b/views/login.erb
@@ -1,7 +1,12 @@
-<h1>Login</h1>
+<!-- grocery list -->
+<div class="center"><h1>Login</h1>
 
 <form action="/login" method= "POST">
-	<input type="text" name="username">
-	<input type="password" name="password" />
+	<input type="text" name="username" placeholder="username">
+	<input type="password" name="password" placeholder="password"/>
 	<input type="submit" value="login" />
 </form>
+<br><br><br>
+Don't have an account yet? No Problem! <br>
+<a style="text-decoration: underline" href='/signup'>Signup here.</a>
+</div>
