--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ html {
 div {
     text-align: center;
     width: 60%;
-    padding: 10px;
+    padding: 5px;
     border: 5px solid gray;
     margin: 0; 
     background-color: #D6D6D8;
@@ -20,6 +20,16 @@ div {
 .center {
     margin-left: auto;
     margin-right: auto;
+}
+
+.left {
+    float: left;
+    width: 45%;
+}
+
+.right {
+  float: right;
+  width: 45%;
 }
 
 a:link {
@@ -83,66 +93,112 @@ h1 {
    border-top-color: #1b435e;
    background: #000066;
    }
-/*
-.button {
-   border-top: 1px solid #040a78;
-   background: #82132b;
-   background: -webkit-gradient(linear, left top, left bottom, from(#110e5e), to(#82132b));
-   background: -webkit-linear-gradient(top, #110e5e, #82132b);
-   background: -moz-linear-gradient(top, #110e5e, #82132b);
-   background: -ms-linear-gradient(top, #110e5e, #82132b);
-   background: -o-linear-gradient(top, #110e5e, #82132b);
-   padding: 4px 8px;
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   border-radius: 5px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #d1d1d1;
-   font-size: 12px;
-   font-family: Georgia, serif;
-   text-decoration: none;
-   vertical-align: middle;
-   }
-.button:hover {
-   border-top-color: #656a87;
-   background: #656a87;
-   color: #ccc;
-   }
-.button:active {
-   border-top-color: #0a1059;
-   background: #0a1059;
-   }*//*
-.button {
-   border-top: 1px solid #000099;
-   background: #6578f5;
-   background: -webkit-gradient(linear, left top, left bottom, from(#000099), to(#6578f5));
-   background: -webkit-linear-gradient(top, #000099, #6578f5);
-   background: -moz-linear-gradient(top, #000099, #6578f5);
-   background: -ms-linear-gradient(top, #000099, #6578f5);
-   background: -o-linear-gradient(top, #000099, #6578f5);
-   padding: 2.5px 5px;
-   -webkit-border-radius: 9px;
-   -moz-border-radius: 9px;
-   border-radius: 9px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #FF0000;
-   font-size: 8px;
-   font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
-   text-decoration: none;
-   vertical-align: middle;
-   }
-.button:hover {
-   border-top-color: #FF0000;
-   background: #FF0000;
-   color: #000099;
-   }
-.button:active {
-   border-top-color: #696869;
-   background: #696869
-}*/
+
+.full {
+  background-color:#b8e356;
+  -webkit-border-top-left-radius:36px;
+  -moz-border-radius-topleft:36px;
+  border-top-left-radius:36px;
+  -webkit-border-top-right-radius:36px;
+  -moz-border-radius-topright:36px;
+  border-top-right-radius:36px;
+  -webkit-border-bottom-right-radius:36px;
+  -moz-border-radius-bottomright:36px;
+  border-bottom-right-radius:36px;
+  -webkit-border-bottom-left-radius:36px;
+  -moz-border-radius-bottomleft:36px;
+  border-bottom-left-radius:36px;
+  height:26px;
+  line-height:26px;
+  width:26px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #86ae47;
+}
+.full:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #a5cc52), color-stop(1, #b8e356) );
+  background:-moz-linear-gradient( center top, #a5cc52 5%, #b8e356 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5cc52', endColorstr='#b8e356');
+  background-color:#a5cc52;
+}.full:active {
+  position:relative;
+  top:1px;
+}
+
+.low {
+  background-color:#FFD119;
+  -webkit-border-top-left-radius:36px;
+  -moz-border-radius-topleft:36px;
+  border-top-left-radius:36px;
+  -webkit-border-top-right-radius:36px;
+  -moz-border-radius-topright:36px;
+  border-top-right-radius:36px;
+  -webkit-border-bottom-right-radius:36px;
+  -moz-border-radius-bottomright:36px;
+  border-bottom-right-radius:36px;
+  -webkit-border-bottom-left-radius:36px;
+  -moz-border-radius-bottomleft:36px;
+  border-bottom-left-radius:36px;
+  height:26px;
+  line-height:26px;
+  width:26px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #86ae47;
+}
+.low:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #a5cc52), color-stop(1, #FFD119) );
+  background:-moz-linear-gradient( center top, #a5cc52 5%, #FFD119 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5cc52', endColorstr='#b8e356');
+  background-color:#a5cc52;
+}.low:active {
+  position:relative;
+  top:1px;
+}
+
+.out {
+  background-color:#CC0000;
+  -webkit-border-top-left-radius:36px;
+  -moz-border-radius-topleft:36px;
+  border-top-left-radius:36px;
+  -webkit-border-top-right-radius:36px;
+  -moz-border-radius-topright:36px;
+  border-top-right-radius:36px;
+  -webkit-border-bottom-right-radius:36px;
+  -moz-border-radius-bottomright:36px;
+  border-bottom-right-radius:36px;
+  -webkit-border-bottom-left-radius:36px;
+  -moz-border-radius-bottomleft:36px;
+  border-bottom-left-radius:36px;
+  height:26px;
+  line-height:26px;
+  width:26px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #86ae47;
+}
+.out:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #a5cc52), color-stop(1, #CC0000) );
+  background:-moz-linear-gradient( center top, #a5cc52 5%, #CC0000 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#a5cc52', endColorstr='#b8e356');
+  background-color:#a5cc52;
+}.out:active {
+  position:relative;
+  top:1px;
+}
+.delete {
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #d1d1d1;
+  font-size: 12px;
+  background: #606d75;
+  padding: 6px 9px 6px 9px;
+  text-decoration: none;
+}
+
+.delete:hover {
+  background: #303538;
+  text-decoration: none;
+}
