--- a/views/todo_list.erb
+++ b/views/todo_list.erb
@@ -1,131 +1,140 @@
 <!-- grocery list -->
 <div class="center"><h1> <%= @user.name %>'s groceries</h1>
-
-<form action='/new_item' method='POST'>
-  <strong>Add Food Item:</strong>
-  <input type='text' name='task' placeholder='item name' />
-  <select name = 'date'>
-  <option value="Full Supply">Full Supply</option>
-  <option value="Running Low">Running Low</option>
-  <option value="All Out!">All Out!</option>
-  </select>
-  <select name = 'number'>
-  <option value=1>1</option>
-  <option value=2>2</option>
-  <option value=3>3</option>
-  <option value=4>4</option>
-  <option value=5>5</option>
-  <option value=6>6</option>
-  <option value=7>7</option>
-  <option value=8>8</option>
-  <option value=9>9</option>
-  <option value=10>10</option>
-  </select>
-  <select name = 'unit'>
-  <option value=""> </option>
-  <option value="box">box</option>
-  <option value="bag">bag</option>
-  <option value="jar">jar</option>
-  <option value="can">can</option>
-  </select>
-  <input type='submit' value='Save'/>
-<br><br>
-<a style="text-decoration: underline" href="/logout">Log Out</a>
-</form>
+  <form action='/new_item' method='POST'>
+    <strong>Add Food Item:</strong>
+    <input type='text' name='task' placeholder='item name' />
+      <select name = 'date'>
+        <option value="Full Supply">Full Supply</option>
+        <option value="Running Low">Running Low</option>
+        <option value="All Out!">All Out!</option>
+      </select>
+      <select name = 'number'>
+        <option value=1>1</option>
+        <option value=2>2</option>
+        <option value=3>3</option>
+        <option value=4>4</option>
+        <option value=5>5</option>
+        <option value=6>6</option>
+        <option value=7>7</option>
+        <option value=8>8</option>
+        <option value=9>9</option>
+        <option value=10>10</option>
+      </select>
+      <select name = 'unit'>
+        <option value=""> </option>
+        <option value="box">box</option>
+        <option value="bag">bag</option>
+        <option value="jar">jar</option>
+        <option value="can">can</option>
+      </select>
+    <input type='submit' value='Save'/>
+    <br><br>
+    <a style="text-decoration: underline" href="/logout">Log Out</a>
+  </form>
 </div>
 
 <div class="left"> <h2> I have: </h2>
-<% @tasks.each do |task| %> 
-<% if task.due_date == "Full Supply" %>
-<% unless task.description.blank? %> 
-<table style="width:50%" align="center">
-  <tr>
-<td style="width: 20%">
-    <button class="full"></button> 
-</td>
-  <td style="width: 40%">
-  <% unless task.number.blank? %> <%= task.number %> <% end %>
-  <% unless task.unit.blank? %> <%= task.unit %> <% end %>
-</td>
-<td style="width: 40%">
-  <%= task.description %> 
-</td>
-  </tr>
-  </table>
-<% end %> 
-<% end %>
-<% end %>
-<% @tasks.each do |task| %>
-<% if task.due_date == "Running Low" %>
-<% unless task.description.blank? %> 
-<table style="width:50%" align="center">
-  <tr>
-<td style="width: 20%">
-    <button class="low"></button>  
-</td>
-  <td style="width: 40%">
-  <% unless task.number.blank? %> <%= task.number %> <% end %>
-  <% unless task.unit.blank? %> <%= task.unit %> <% end %>
-</td>
-<td style="width: 40%">
-  <%= task.description %> 
-</td>
-  </tr>
-  </table>
-<% end %> 
-<% end %>
-<% end %>
-<a style="text-decoration: underline" href="/edit">Edit List</a>
+  <% @tasks.each do |task| %> 
+    <% if task.due_date == "Full Supply" %>
+      <% unless task.description.blank? %> 
+        <table style="width:50%" align="center">
+          <tr>
+            <td style="width: 20%">
+              <button class="full">
+              </button> 
+            </td>
+            <td style="width: 40%">
+              <% unless task.number.blank? %> 
+                <%= task.number %> 
+              <% end %>
+              <% unless task.unit.blank? %> 
+                <%= task.unit %> 
+              <% end %>
+            </td>
+            <td style="width: 40%">
+              <%= task.description %> 
+            </td>
+          </tr>
+        </table>
+      <% end %> 
+    <% end %>
+  <% end %>
+  <% @tasks.each do |task| %>
+    <% if task.due_date == "Running Low" %>
+      <% unless task.description.blank? %> 
+        <table style="width:50%" align="center">
+          <tr>
+            <td style="width: 20%">
+              <button class="low"></button>  
+            </td>
+            <td style="width: 40%">
+              <% unless task.number.blank? %> 
+                <%= task.number %> 
+              <% end %>
+              <% unless task.unit.blank? %> 
+                <%= task.unit %> 
+              <% end %>
+            </td>
+            <td style="width: 40%">
+              <%= task.description %> 
+            </td>
+          </tr>
+        </table>
+      <% end %> 
+    <% end %>
+  <% end %>
+  <a style="text-decoration: underline" href="/edit">Edit List</a>
 </div>
 
 <div class="right"> <h2>I need: </h2> 
-<% @tasks.each do |task| %> 
-<% if task.due_date == "Running Low" %>
-<% unless task.description.blank? %> 
-<table style="width:50%" align="center">
-  <tr>
-<td style="width: 20%">
-    <button class="low"></button>
-</td>
-  <td style="width: 40%">
-   <% unless task.number.blank? %> <%= task.number %> <% end %>
-  <% unless task.unit.blank? %> <%= task.unit %> <% end %>
-  </td>
-<td style="width: 40%">
-  <%= task.description %> 
-</td>
-</tr>
-</table>
-<% end %>
-<% end %> 
-<% end %>
-<% @tasks.each do |task| %>
-<% if task.due_date == "All Out!" %>
-<% unless task.description.blank? %> 
-<table style="width:50%" align="center">
-  <tr>
-<td style="width: 20%">
-    <button class="out"></button>
-</td>
-  <td style="width: 40%">
-   <% unless task.number.blank? %> <%= task.number %> <% end %>
-  <% unless task.unit.blank? %> <%= task.unit %> <% end %>
-  </td>
-<td style="width: 40%">
-  <%= task.description %> 
-</td>
-</tr>
-</table>
-<% end %>
-<% end %> 
-<% end %>
-<a style="text-decoration: underline" href="/edit">Edit List</a>
+  <% @tasks.each do |task| %> 
+    <% if task.due_date == "Running Low" %>
+      <% unless task.description.blank? %> 
+        <table style="width:50%" align="center">
+          <tr>
+            <td style="width: 20%">
+              <button class="low"></button>
+            </td>
+            <td style="width: 40%">
+              <% unless task.number.blank? %> 
+                <%= task.number %> 
+              <% end %>
+              <% unless task.unit.blank? %> 
+                <%= task.unit %> 
+              <% end %>
+            </td>
+            <td style="width: 40%">
+              <%= task.description %> 
+            </td>
+          </tr>
+        </table>
+      <% end %>
+    <% end %> 
+  <% end %>
+  <% @tasks.each do |task| %>
+    <% if task.due_date == "All Out!" %>
+      <% unless task.description.blank? %> 
+        <table style="width:50%" align="center">
+          <tr>
+            <td style="width: 20%">
+              <button class="out"></button>
+            </td>
+            <td style="width: 40%">
+              <% unless task.number.blank? %> 
+                <%= task.number %> 
+              <% end %>
+              <% unless task.unit.blank? %> 
+                <%= task.unit %> 
+              <% end %>
+            </td>
+            <td style="width: 40%">
+              <%= task.description %> 
+            </td>
+          </tr>
+        </table>
+      <% end %>
+    <% end %> 
+  <% end %>
+  <a style="text-decoration: underline" href="/edit">Edit List</a>
 </div>
-<br>
-
-
-
-
-<!-- <div class="bottom"><h3>Key</h3>
-</div> -->
 
