before deleting stuff

--- a/views/todo_list.erb
+++ b/views/todo_list.erb
@@ -137,4 +137,6 @@
   <% end %>
   <a style="text-decoration: underline" href="/edit">Edit List</a>
 </div>
-
+<br>
+<div class="bottom"><h3>Key</h3>
+</div>
