--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@ div {
   width: 40%;
   left: 20%;
   float: center;
+  text-align: center;
   position: absolute;
   bottom: 0;
 }
@@ -196,13 +197,16 @@ h1 {
   top:1px;
 }
 .delete {
-  border-radius: 6px;*/
+  border-radius: 6px;
   font-family: Arial;
   color: #d1d1d1;
   font-size: 8px;
   background: #606d75;
-  padding: 4px 7px 1px 7px;
-  text-decoration: none;
+  padding: 10px 7px 1px 7px;
+  text-align: center;
+  height:25px;
+  width: 25px;
+  vertical-align: top;
 }
 
 .delete:hover {
