with recipe database

--- a/views/todo_list.erb
+++ b/views/todo_list.erb
@@ -26,6 +26,7 @@
         <option value="bag">bag</option>
         <option value="jar">jar</option>
         <option value="can">can</option>
+        <option value="bottle">bottle</option>
       </select>
     <input type='submit' value='Save'/>
     <br><br>
@@ -137,6 +138,22 @@
   <% end %>
   <a style="text-decoration: underline" href="/edit">Edit List</a>
 </div>
+
+
 <br>
+
+
 <div class="bottom"><h3>Key</h3>
+  <a style="text-decoration: none">
+    <button class="full">
+    </button>
+  </a>full supply &nbsp; &nbsp; &nbsp; &nbsp;
+  <a style="text-decoration: none">
+    <button class="low">
+    </button>
+  </a>running low &nbsp; &nbsp; &nbsp; &nbsp;
+  <a style="text-decoration: none">
+    <button class="out">
+    </button>
+  </a>all out &nbsp; &nbsp; &nbsp; &nbsp; <br> &nbsp;
 </div>
