--- a/views/edit_items.erb
+++ b/views/edit_items.erb
@@ -26,6 +26,7 @@
         <option value="bag">bag</option>
         <option value="jar">jar</option>
         <option value="can">can</option>
+        <option value="bottle">bottle</option>
       </select>
     <input type='submit' value='Save'/>
     <br><br>
@@ -300,6 +301,35 @@
     <% end %> 
   <% end %>
   <a style="text-decoration: underline" href="/todos">Back</a>
+</div>
+
+
+<br>
+
+
+<div class="bottom"><h3>Key</h3>
+  <a style="text-decoration: none">
+    <button class="full">
+    </button>
+  </a>full supply &nbsp; &nbsp; &nbsp; &nbsp;
+  <a style="text-decoration: none">
+    <button class="low">
+    </button>
+  </a>running low &nbsp; &nbsp; &nbsp; &nbsp;
+  <a style="text-decoration: none">
+    <button class="out">
+    </button>
+  </a>all out &nbsp; &nbsp; &nbsp; &nbsp;
+  <br>
+  <a style="text-decoration: none">
+    <button class="delete"> 
+      <span title="delete item"> X
+      </span>
+    </button> 
+  </a>delete item &nbsp; &nbsp; &nbsp; &nbsp;
+    <select name = 'number'>
+      <option value=1>1</option>
+    </select> number of items
 </div>
 
 
