fixing recipe ingredients

--- a/views/todo_list.erb
+++ b/views/todo_list.erb
@@ -30,6 +30,7 @@
       </select>
     <input type='submit' value='Save'/>
     <br><br>
+    <a style="text-decoration: underline" href="/recipes">Recipes</a> &nbsp; &nbsp; &nbsp; &nbsp; 
     <a style="text-decoration: underline" href="/logout">Log Out</a>
   </form>
 </div>
