--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -1,12 +1,17 @@
 <div class="center"><h1> <%= @user.name %>'s recipes</h1>
-  <form action='/new_item' method='POST'>
+  <form action='/new_recipe' method='POST'>
     <strong>Add New Recipe:</strong><br><br>
-    <textarea name='instructions' placeholder='recipe name' rows='5' cols='45'></textarea><br><br>
-
+    <textarea name='name' placeholder='recipe name' rows='5' cols='45'></textarea><br><br>
     <textarea name='instructions' placeholder='recipe instructions' rows='15' cols= '45'></textarea><br><br>
 
-    <input type='submit' value='Add Ingredients' href="/recipe_ingredients"/>
+    <input type='submit' value='Add Ingredients'/>
     <br><br>
     <a style="text-decoration: underline" href="/logout">Log Out</a>
   </form>
+</div>
+
+<div class="center">
+  <% @recipes.each do |recipe| %>
+    <%= recipe.name %>
+  <% end %>
 </div>
