--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -3,8 +3,11 @@
     <textarea name='name' placeholder='recipe name' rows='5' cols='45'></textarea><br><br>
     <textarea name='instructions' placeholder='recipe instructions' rows='15' cols= '45'></textarea><br><br>
 
-    <input type='submit' value='Add Ingredients'/>
+    <input type='submit' value='Save'/>
+    <!-- <input type='submit' value='Add Ingredients'/> -->
     <br><br>
+
+    <a style="text-decoration: underline" href="/todos">Groceries</a> &nbsp; &nbsp; &nbsp; &nbsp;
     <a style="text-decoration: underline" href="/logout">Log Out</a>
   </form>
 </div>
